--- a/data_portal/neoregister.html
+++ b/data_portal/neoregister.html
@@ -96,7 +96,7 @@
         <div id = "verticalLine" class = "w3-col">  <!-- This div helps to divide the screen look better by making a vertical lign in between the cards -->
         </div>
         <div class = "w3-card-4 w3-col w3-shadow glyphicon glyphicon-calendar" onclick="show_appt()" id = "secondColumn1" style = "margin-left: -2px; margin-top: 2%;width: 31%; height: 94%;background: rgba(255, 112, 26, 0.8)"> <!-- The first column of the first row -->
-            <h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: right; margin-top: 75px;  margin-left: 175px; margin-right: 3%; color: white;">ADD NEW APPOINTMEMT</h2> <!--Name of Operation: Vital Signs -->
+            <h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: right; margin-top: 75px;  margin-left: 175px; margin-right: 3%; color: white;">ADD NEW APPOINTMENT</h2> <!--Name of Operation: Vital Signs -->
         </div>
         <div id = "verticalLine" class = "w3-col"> <!-- This div helps to divide the screen look better by making a vertical lign in between the cards -->
         </div>
@@ -116,11 +116,9 @@
           <h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: right; margin-top: 75px;  margin-left: 175px; margin-right: 3%; color: white;">PROVIDER NFC REGISTRATION</h2> <!--Name of Operation: X-Ray -->
 
         </div>
-        <!--<div id = "verticalLine2" class = "w3-col">--> <!-- This div helps to divide the screen look better by making a vertical lign in between the cards -->
+
         </div>
-        <!--<div class = "w3-card-4 w3-col w3-shadow glyphicon glyphicon-bed" id = "thirdColumn2" style = "margin-top: -1%;width: 31%; height: 94%;background: rgba(255, 112, 26, 0.8);"> <!-- The third column of the second row -->
-          <!--<h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: RIGHT; margin-top: 100px;margin-right: 3%;color: white;">OK SAM!</h2> <!--Name of Operation: Diagnostic -->
-        <!--</div> -->
+
       </div>
 
     </div>
