--- a/data_portal/landingpage.html
+++ b/data_portal/landingpage.html
@@ -225,7 +225,7 @@
           <div id="newWindow" class="animated zoomIn">
             <div id="wrapper">
               <button id="button-close" onclick="div_hide()" style="border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
-              <img src="optum.png" id="hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+              <img src="img/optum.png" id="hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
               <h1 style="color: #ffffff; text-align: center;">scan patient</h1>
             </div> <!-- end of wrapper div -->
             <hr>
@@ -233,7 +233,7 @@
             <p style="margin-left: 7%; color: #ffffff; font-size: 24px; font-family:'Raleway',sans-serif;">Please scan the patient's NFC card on the scanner if applicable</p>
             <br/>
             <div>
-              <button id="assign-NFC"><a style="margin-left: -4px;color:white; font-family:'Raleway',sans-serif; font-size: 20px; padding-top: 25px; padding-bottom: 25px; padding-left: 25px; padding-right: 27px;" href="dayDash.HTML" class="input-box">proceed</a></button>
+              <button id="assign-NFC"><a style="margin-left: -4px;color:white; font-family:'Raleway',sans-serif; font-size: 20px; padding-top: 25px; padding-bottom: 25px; padding-left: 25px; padding-right: 27px;" href="neoregister.HTML" class="input-box">proceed</a></button>
             </div>
           </div> <!-- end of newWindow div -->
         </div> <!-- end of popupContact div -->
