--- a/data_portal/NPS.html
+++ b/data_portal/NPS.html
@@ -18,9 +18,10 @@
    <div id="mySidebar" class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left">
             
             <div id="links" class="w3-bar w3-white">
-                <a href="register.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a> <!-- register page html -->
+                <a href="neoregister.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a> <!-- register page html -->
                 <a href="SettingsPage.html" class="w3-bar-item w3-button w3-padding-16">Settings<i id="nav-icon" class="glyphicon glyphicon-user"></i></a> <!-- settings page html -->
                 <a href="neoStats.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a> <!-- neo stats page html -->
+                <a href="NPS.html" class="w3-bar-item w3-button w3-padding-16">NPS Survey<i id="nav-icon" class="glyphicon glyphicon-edit"></i></a> <!-- NPS page html -->
             </div> <!-- end of links div -->
 
     </div> <!-- end of mySidebar div -->
