--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -1,59 +1,47 @@
 <html>
-<head>
-  <!-- The following scripts are different libraries used-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <!--The following links are for CSS libraries that are used. -->
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
-  <link rel="stylesheet" href="css/stats.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <!-- The following scripts are different libraries used-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--The following links are for CSS libraries that are used. -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="css/stats.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-<body id="body" style="overflow:hidden;">
-
-  <!-- The following div deals with the side bar nav. THis includes the close button and the home settings and stats button.-->
-  <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left" style="display:none" id="mySidebar">
-
-    <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
-
-    <a href="nightDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
-    <a href="newSettings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
-
-    <a href="statistics.HTML" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
-  </div>
-  <!-- THIS IS THE END OF THE SIDE BAR NAV -->
-
-  <div zclass="w3-main" id="main" class = "animated fadeIn">
-
+  <body id="body" style="overflow:hidden;">
+    <!-- The following div deals with the side bar nav. THis includes the close button and the home settings and stats button.-->
+    <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left" style="display:none" id="mySidebar">
+      <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
+      <a href="nightDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
+      <a href="newSettings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
+      <a href="statistics.HTML" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
+    </div> <!-- THIS IS THE END OF THE SIDE BAR NAV -->
+    <div zclass="w3-main" id="main" class = "animated fadeIn">
     <div id = "topBar">
       <button class="w3-button w3-xlarge" onclick="w3_open()">&#9776;</button>
       <img src="img/optum1.jpg" alt="optum" style="width:250px;height:80px;">
-    </div>
-
+    </div> <!-- End of topBar div -->
 
     <div id = "mainContent" style = "font-family:'Raleway',sans-serif">
-    <div class = "w3-row">
-      <div class="dropdown">
-        <!--title of the page..below that is the canvas for the graph and also the drop down menu for the LINE GRAPH-->
-
-
+      <div class = "w3-row">
+        <div class="dropdown">
+          <!--title of the page..below that is the canvas for the graph and also the drop down menu for the LINE GRAPH-->
+        </div>
       </div>
 
-    </div>
-
-        <div class = "w3-row" style = "">
-        <!--This div contains the information regarding the ACTUAL stats...-->
+      <div class = "w3-row">
+      <!--This div contains the information regarding the ACTUAL stats...-->
         <div class="w3-card-4 w3-col w3-hover-shadow" style="margin-left: 1%; width:55%; height: 44%; margin-top:40px;">
           <header class="w3-container w3-indigo">
-          <h2 style = "text-align: center">COMPREHENSIVE DATA</h2>
-        </header></br>
+            <h2 style = "text-align: center">COMPREHENSIVE DATA</h2>
+          </header></br>
           <select id="chartType" style = "margin-left: 15%; width: 30%;"> <!--This selection will be providers -->
             <option>Providers</option>
           </select>
@@ -61,29 +49,25 @@
           <select id = "operationType" style = "margin-left: 5%;width: 30%;">
             <option value = "line">Operations</option>
           </select>
-        <canvas id="myChart" class = "w3-col" style = "margin-left: 1%;width: 95%;height: 77%; padding-bottom: 10px;">
-
-
-
+          <canvas id="myChart" class = "w3-col" style = "margin-left: 1%;width: 95%;height: 77%; padding-bottom: 10px;">
         <!--this is the end of the first LINE GRAPH dropdown section...there is a break and another line after this section for aethestics.-->
-      </div>
+        </div> <!-- end of w3-card-4 w3-col w3-hover-shadow div -->
+
         <div class="w3-card-4 w3-col w3-hover-shadow" style="margin-left: 2%;width:41%; height: 44%; overflow-y: auto; margin-top:40px;">
           <header class="w3-container w3-indigo w3-hover-shadow">
             <h2 style = "text-align: center;">CLINICIAN STATS</h2>
           </header>
-          <div class="w3-container" style="">
-
+          <div class="w3-container">
             <select id = "providerDropDown" style = "margin-top: 3%;">
               <option id="null">All Clinicians </option>
             </select>
-            <ul id = "averages">
-
-            </ul>
-          </div>
-        </div>
-      </div>
+            <ul id = "averages"></ul>
+          </div> <!-- end of w3-container div -->
+        </div> <!-- w3-card-4 w3-col w3-hover-shadow div -->
+      </div> <!-- enf of 2nd w3-row div -->
 
       <hr width: 50%;>
+
       <div class="w3-row">
         <div class="w3-card-4 w3-col" style="margin-left: 1%;width:60%; height: 36%;">
           <header class="w3-container w3-orange w3-hover-shadow">
@@ -97,40 +81,36 @@
           <canvas class = "w3-col" style = "margin-left: 1%;width: 95%;height: 74%; padding-bottom: 10px;" id="myPieChart"></canvas></br>
 
           <div class="w3-container">
-
-          </div>
-        </div>
+          </div> <!-- end of w3-container div -->
+        </div> <!-- end of w3-card-4 w3-col div -->
         <div class="w3-col" style="width:2%; height: 35%;">
-        </div>
+        </div> <!-- end of w3-col div -->
         <div class="w3-card-4 w3-col" style="width:17%; height: 36%; text-align: center; ">
           <header class="w3-container w3-indigo w3-hover-shadow">
             <h3 style = "color: #fff;text-align: center;">NPS SCORE</h3>
-
           </header>
-          <div style = "margin-left: 33%; margin-top: 29%;"id = "NPSLoad" class="loader"></div>
+          <div style = "margin-left: 33%; margin-top: 29%;"id = "NPSLoad" class="loader">
+          </div> <!-- end of NPSLoad div -->
           <span id = "NPS" style = "display: none;"></span>
           <div class="w3-container">
-
-          </div>
-        </div>
+          </div> <!-- end of w3-container div -->
+        </div> <!-- end of w3-card-4 w3-col div -->
         <div class="w3-col" style="width:2%; height: 35%;">
-        </div>
+        </div> <!-- end of w3-col div -->
         <div class="w3-card-4 w3-col" style="width:17%; height: 36%;">
           <header class="w3-container w3-orange w3-hover-shadow">
             <h3 style = "color: #fff;text-align: center;">PATIENT WAIT TIME</h3>
           </header>
-          <div style = "margin-left: 33%; margin-top: 29%;"id = "NPSLoad2" class="loader"></div>
+          <div style = "margin-left: 33%; margin-top: 29%;"id = "NPSLoad2" class="loader">
+          </div> <!-- end of NPSLoad2 div -->
           <div class="w3-container">
             <div id = "avgWaitTime" class = "animated bounceIn" style = "display: none;margin: auto; margin-top: 15px; width: 250px; height: 250px;border: 5px solid #000;border-radius: 50%;text-align: center; font-family: 'Cabin', sans-serif;">
-            <span style = "font-size: 124px;" id = "patientWT"> loading </span>
-            </div>
-          </div>
-        </div>
-
+              <span style = "font-size: 124px;" id = "patientWT"> loading </span>
+            </div> <!-- end of avdWaitTime div -->
+          </div> <!-- end of w3-container -->
+        </div> <!-- end of w3-card-4 w3-col div -->
       </div> <!-- w3-row DIV END -->
-
-    </div><br/>
-  </div>
-  <script type="text/javascript" src="js/stats.js"></script>
+    </div><br/> <!-- end of main-content div -->
+    <script type="text/javascript" src="js/stats.js"></script>
   </body>
-  </html>
+</html>
