--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -1,3 +1,7 @@
+<!-- *************************************************************** -->
+<!-- This page allows users to insert new actions and update actions -->
+<!-- *************************************************************** -->
+
 <!DOCTYPE HTML>
 <html>
     <head>
