--- a/data_portal/register.html
+++ b/data_portal/register.html
@@ -1,14 +1,14 @@
 <!-- this page is the register for the data portal in which patients and providers can be registered in the system/assigned NFC, and appointments can be created -->
 
+<!-- *********************************************** -->
+<!-- This page has been replaced by neoregister.html -->
+<!-- *********************************************** -->
+
 <html>
   <head>
 
   <!-- references the css sheet -->
   <link rel="stylesheet" href="css/register.css">
-
-
-
-
     <!-- importing boostrap and jquery libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
