--- a/data_portal/index.html
+++ b/data_portal/index.html
@@ -1,3 +1,7 @@
+<!-- *********************************************** -->
+<!-- This page has been replaced by landingpage.html -->
+<!-- *********************************************** -->
+
 <!DOCTYPE html>
 <html lang="en">
 
