--- a/data_portal/landingpage.html
+++ b/data_portal/landingpage.html
@@ -1,3 +1,7 @@
+<!-- *********************************************** -->
+<!--                Landingpage.html                 -->
+<!-- *********************************************** -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,6 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
+    <!-- *************** START OF Landingpage CSS *************** -->
     <style>
       @import "http://fonts.googleapis.com/css?family=Raleway";
       body {
@@ -201,7 +206,9 @@
         font-family:'Raleway',sans-serif;
       }
     </style>
+  <!-- *************** END OF Landingpage CSS *************** -->
   </head>
+
   <body>
     <div class="logo"> <!-- optum logo -->
       <img src="img/optum.png" alt="optum" style="width:250px;height:80px;float:left;">
@@ -212,7 +219,7 @@
         <h3 style="color:white; float: right; margin-right: 37%;margin-top: 325px;"> ENTER PIN OR SCAN BADGE TO LOG IN </h3>
       </div>
       <form>
-        <div class="form-group">
+        <div class="form-group"> <!-- ENTER PIN BOX -->
           <label style="color: white; float: right; margin-right: 58%;margin-top: 25px;" for="pwd">PIN:</label>
           <input type="password" class="form-control" id="pwd">
         </div> <!-- end of form-group div -->
