linked data portal

--- a/data_portal/index.html
+++ b/data_portal/index.html
@@ -64,7 +64,7 @@
 
 
     <header class="masthead">
-      <img src="optum.png" alt="optum" style="width:250px;height:80px;float:left;">
+      <img src="img/optum.png" alt="optum" style="width:250px;height:80px;float:left;">
         <div class="header-content">
 
             <div class="header-content-inner">
@@ -76,7 +76,7 @@
                   Username:<input type="text"/><br/>
                   Password:<input type="password"/>
                 </form>
-                <a class="btn btn-primary btn-xl" href="register.html">LOGIN</a>
+                <a class="btn btn-primary btn-xl" href="neoregister.html">LOGIN</a>
             </div>
         </div>
     </header>
