--- a/data_portal/neoregister.html
+++ b/data_portal/neoregister.html
@@ -46,13 +46,13 @@
     <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
 
     <!-- register button on toolbar -->
-    <a href="register.html" id="register_bar" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">register<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
+    <a href="neoregister.html" id="register_bar" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">register<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
 
     <!-- settings button on toolbar -->
-    <a href="newSettings.HTML" id="settings_bar" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
+    <a href="SettingsPage.HTML" id="settings_bar" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
 
     <!-- statistics button on toolbar -->
-    <a href="statistics.HTML" id="statistics_bar" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
+    <a href="neoStats.HTML" id="statistics_bar" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
 
   <!-- end of sidebar div -->
   </div>
@@ -557,5 +557,5 @@
     <script src = "js/neoregister.js"></script>
 
     </body>
-    
+
 </html>
