--- a/dashboard/dayDash.html
+++ b/dashboard/dayDash.html
@@ -156,7 +156,7 @@
   <div zclass="w3-main" id="main" class = "animated fadeIn">
 
     <div id = "topBar"> <!-- This div will be the top bar where the optum logo will be -->
-      <img src="img/optum1.png" alt="optum" style="margin-left: 41%;width:250px;height:80px;"> <!-- This is the img logo for the Optum sign -->
+      <img src="img/optum1.jpg" alt="optum" style="margin-left: 41%;width:250px;height:80px;"> <!-- This is the img logo for the Optum sign -->
     </div>
 
     <div id="name_div" style="float:left"> Wassup </div>
