fixed slider and titles on NPS page

--- a/dashboard/NPS.html
+++ b/dashboard/NPS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Optumistics NPS Page</title>
+    <title>Optumistics Survey Page</title>
     <meta charset = "UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
         <a href="neoregister.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a> <!-- register page html -->
         <a href="SettingsPage.html" class="w3-bar-item w3-button w3-padding-16">Settings<i id="nav-icon" class="glyphicon glyphicon-user"></i></a> <!-- settings page html -->
         <a href="neoStats.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a> <!-- neo stats page html -->
-        <a href="NPS.html" class="w3-bar-item w3-button w3-padding-16">NPS Survey<i id="nav-icon" class="glyphicon glyphicon-edit"></i></a> <!-- NPS page html -->
+        <a href="NPS.html" class="w3-bar-item w3-button w3-padding-16">Patient Survey<i id="nav-icon" class="glyphicon glyphicon-edit"></i></a> <!-- NPS page html -->
       </div> <!-- end of links div -->
 
     </div> <!-- end of mySidebar div -->
@@ -35,7 +35,7 @@
 
 
       <div id="mainContent">
-        <h1>NPS Survey</h1>
+        <h1>Patient Survey</h1>
         <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;border:0;border-top:2px solid #000;" />
         <br/>
       </div> <!-- end of mainContent -->
@@ -45,7 +45,7 @@
        <div class="panel panel-warning">
         <div class="panel-heading"></div>
         <div class="panel-body">
-          <input id="ex13" type="text" data-slider-value="5" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" data-slider-ticks-snap-bounds="10" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"]'/>
+          <input id="ex13" type="text" data-slider-value="10" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" data-slider-ticks-snap-bounds="10" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"]'/>
 
         </div> <!--end of panel-body div tag-->
       </div> <!--end of panel-info div tag-->
