--- a/dashboard/NPS.html
+++ b/dashboard/NPS.html
@@ -31,6 +31,11 @@
       <div id="topBar">
         <button id="topBar-button" class="w3-button w3-xlarge">&#9776;</button> <!-- side bar button -->
         <img src="img/optum1.jpg" alt="optum"> <!-- optum logo on top of the page -->
+
+        <div>
+          <button id='skipButton' type="button" class="btn btn-warning">Skip</button>
+        </div>
+        
       </div> <!-- end of topBar div -->
 
 
@@ -39,6 +44,8 @@
         <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;border:0;border-top:2px solid #000;" />
         <br/>
       </div> <!-- end of mainContent -->
+
+
 
       <div class="container">
        <p>Please rate the following question on a scale of 1-10, 10 being the most positive.</p>
@@ -57,6 +64,10 @@
         <button id='submit' type="button" class="btn btn-warning">Submit</button>
 
       </div> <!-- end of container2 div tag-->
+
+
+
+
 
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
